--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "4.4.3",
     "@material-ui/icons": "4.4.3",
     "@react-firebase/auth": "^0.2.9",
+    "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "firebase": "6.6.2",
     "firebaseui": "4.2.0",
