--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebaseui": "4.2.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-firebaseui": "^4.0.0",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1"
   },
